profilelist1exp/unpackaged/objects/Partner_Request__c.object
<CustomObject>
    <fields>
        <fullName>AGREE_to_Dell_MFT_Partner_Program__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AGREE to Dell MFT Partner Program</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ability_to_do_business_with_Federal__c</fullName>
        <description>Has your company or its principals been convicted of bribery (or currently under investigation)?</description>
        <label>Currently under investigation?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Suggestion_Creator__c</fullName>
        <label>Account Suggestion Creator</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||WF -Y - PRM Duplicate Partner Registration Account Owner Notification/ APP/ FU / OM - N ||Email alert -Y:PRM Duplicate Partner Registration Account Owner Notification Desc -||SFA -Y/PRM-Y||VAL -  N||CR# -R10.2 # 816  ||</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner Requests (Account)</relationshipLabel>
        <relationshipName>R00N70000002MeWhEAK</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active_Buying_Relationship_AgreementFor__c</fullName>
        <formula>IF(Active_Buying_Relationship_Agreement__c , &apos;YES&apos;, &apos;NO&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active Buying Relationship Agreement</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Buying_Relationship_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created to drive the field Active buying relationship agreement , API name used in formula.</description>
        <label>Active Buying Relationship Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address_Line_1_CF__c</fullName>
        <defaultValue>false</defaultValue>
        <description>INTEG-N / NON INTEG - Y /APEX/CC - N||WF / APP/ FU / OM - N ||Desc -||SFA -Y/PRM-Y||VAL -  N||CR# -R10.2 # 816  ||</description>
        <label>Address Line 1 CF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address_Line_1__c</fullName>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||WF / APP/ FU / OM - N ||Desc -||SFA -Y/PRM-Y||VAL -  N||CR# -R10.2 # 816  ||</description>
        <label>Address Line 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_2_CF__c</fullName>
        <defaultValue>false</defaultValue>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Address Line 2 CF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address_Line_2__c</fullName>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Address Line 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_3_CF__c</fullName>
        <defaultValue>false</defaultValue>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Address Line 3 CF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address_Line_3__c</fullName>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Address Line 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agree_Both_Dell_ResellerISV__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Agree Both Dell ResellerISV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agree_Dell_ISV_Program__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Agree Dell Technology Partner Program</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agree_Dell_Partner_Dist_Pro__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Agree Dell Partner Dist Pro</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agree_Dell_Partner_Dist_Sup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Agree Dell Partner Dist Sup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agree_Dell_Reseller__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Agree Dell Reseller</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agree_OEM_Terms_and_Conditions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Agree OEM Terms and Conditions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agreed_on__c</fullName>
        <label>Legacy Partner Program Ts &amp; Cs Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Agreement_Hard_cpy_Rcvd_Is_Complete_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Agreement Hard-copy Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alert_Analyst_Review_Comments__c</fullName>
        <description>D&amp;B Alert Information</description>
        <label>Alert Analyst Review Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alert_Category__c</fullName>
        <description>D&amp;B Alert Information</description>
        <label>Alert Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alert_Comment_Text__c</fullName>
        <description>D&amp;B Alert Information</description>
        <label>Alert Comment Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alert_Comment_Timestamp__c</fullName>
        <description>D&amp;B Alert Information</description>
        <label>Alert Comment Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Alert_Comment_Type__c</fullName>
        <description>D&amp;B Alert Information</description>
        <label>Alert Comment Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alert_Comment_User__c</fullName>
        <description>D&amp;B Alert Information</description>
        <label>Alert Comment User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alert_Date__c</fullName>
        <description>D&amp;B Alert Information</description>
        <label>Alert Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Alert_Source_URL__c</fullName>
        <description>D&amp;B Alert Information</description>
        <label>Alert Source URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Alert_Source__c</fullName>
        <description>D&amp;B Alert Information</description>
        <label>Alert Source </label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Environments__c</fullName>
        <label>Application Environments</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Documentum</fullName>
                </value>
                <value>
                    <fullName>Informix</fullName>
                </value>
                <value>
                    <fullName>MS Exchange</fullName>
                </value>
                <value>
                    <fullName>MS SQL</fullName>
                </value>
                <value>
                    <fullName>Oracle</fullName>
                </value>
                <value>
                    <fullName>SAP</fullName>
                </value>
                <value>
                    <fullName>SAS</fullName>
                </value>
                <value>
                    <fullName>Siebel</fullName>
                </value>
                <value>
                    <fullName>Sybase</fullName>
                </value>
                <value>
                    <fullName>Tivoli</fullName>
                </value>
                <value>
                    <fullName>VMWare</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ApprovalComments_SponsoringDistributor__c</fullName>
        <label>Sponsoring Distributor Approval Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Approve_Is_Complete_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Approve</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Area_of_Interest_Non_GC__c</fullName>
        <label>Area of Interest</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cloud</fullName>
                </value>
                <value>
                    <fullName>Communications</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Networking</fullName>
                </value>
                <value>
                    <fullName>Public</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Storage</fullName>
                </value>
                <value>
                    <fullName>Systems Management</fullName>
                </value>
                <value>
                    <fullName>Video Graphics</fullName>
                </value>
                <value>
                    <fullName>Visualization</fullName>
                </value>
                <value>
                    <fullName>AIM</fullName>
                </value>
                <value>
                    <fullName>Business Client</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Area_of_Interest__c</fullName>
        <label>Area of Interest</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cloud</fullName>
                </value>
                <value>
                    <fullName>Communications</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Networking</fullName>
                </value>
                <value>
                    <fullName>Public</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Storage</fullName>
                </value>
                <value>
                    <fullName>Systems Management</fullName>
                </value>
                <value>
                    <fullName>Video Graphics</fullName>
                </value>
                <value>
                    <fullName>Virtualization</fullName>
                </value>
                <value>
                    <fullName>AIM</fullName>
                </value>
                <value>
                    <fullName>Business Client</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Asset_recovery_resale_recycling__c</fullName>
        <description>Please indicate how you deliver the following services to your customers</description>
        <label>Asset recovery/resale/recycling</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Deliver</fullName>
                </value>
                <value>
                    <fullName>Resell</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Boutique_Firm__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boutique Firm</description>
        <inlineHelpText>We are highly specialized in one particular market (storage, security, cloud, etc.).</inlineHelpText>
        <label>Boutique Firm</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CAR_Identifier__c</fullName>
        <description>Identification of a vetting report</description>
        <label>CAR Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSP_MSP_Organization_require_EMC_Storage__c</fullName>
        <label>CSP/MSP Organization require EMC Storage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Capability__c</fullName>
        <label>Geographic Coverage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Local</fullName>
                </value>
                <value>
                    <fullName>Regional</fullName>
                </value>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>Global</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Check_Denied_Party_List_Is_Complete_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Check Denied Party List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Check_For_Duplicates_Is_Complete_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Check For Duplicates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City_CF__c</fullName>
        <defaultValue>false</defaultValue>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>City CF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cloud_Services_Revenue__c</fullName>
        <label>Cloud Services Revenue %?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0-10%</fullName>
                </value>
                <value>
                    <fullName>11-20%</fullName>
                </value>
                <value>
                    <fullName>21-30%</fullName>
                </value>
                <value>
                    <fullName>31-40%</fullName>
                </value>
                <value>
                    <fullName>41-50%</fullName>
                </value>
                <value>
                    <fullName>51-60%</fullName>
                </value>
                <value>
                    <fullName>61-70%</fullName>
                </value>
                <value>
                    <fullName>71-80%</fullName>
                </value>
                <value>
                    <fullName>81-90%</fullName>
                </value>
                <value>
                    <fullName>91-100%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Comments</description>
        <label>Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company_CF__c</fullName>
        <defaultValue>false</defaultValue>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Company CF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company_HK__c</fullName>
        <label>Full Legal Name of Your Organization HK</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Full Legal Name of Your Organization</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consulting_Market__c</fullName>
        <description>Please indicate how you deliver the following services to your customers</description>
        <label>Consulting Market</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Consulting__c</fullName>
        <description>Please indicate how you deliver the following services to your customers</description>
        <label>Consulting</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Deliver</fullName>
                </value>
                <value>
                    <fullName>Resell</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Partner Requests</relationshipLabel>
        <relationshipName>R00N70000002MeXpEAK</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Corporate_Twitter__c</fullName>
        <label>Corporate Twitter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Countries_doing_business_in__c</fullName>
        <label>Countries doing business in</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AFGHANISTAN</fullName>
                </value>
                <value>
                    <fullName>ALBANIA</fullName>
                </value>
                <value>
                    <fullName>ALGERIA</fullName>
                </value>
                <value>
                    <fullName>ANDORRA</fullName>
                </value>
                <value>
                    <fullName>ANGOLA</fullName>
                </value>
                <value>
                    <fullName>ANGUILLA</fullName>
                </value>
                <value>
                    <fullName>ANTIGUA AND BARBUDA</fullName>
                </value>
                <value>
                    <fullName>ARGENTINA</fullName>
                </value>
                <value>
                    <fullName>ARMENIA</fullName>
                </value>
                <value>
                    <fullName>ARUBA</fullName>
                </value>
                <value>
                    <fullName>AUSTRALIA</fullName>
                </value>
                <value>
                    <fullName>AUSTRIA</fullName>
                </value>
                <value>
                    <fullName>AZERBAIJAN</fullName>
                </value>
                <value>
                    <fullName>BAHAMAS</fullName>
                </value>
                <value>
                    <fullName>BAHRAIN</fullName>
                </value>
                <value>
                    <fullName>BANGLADESH</fullName>
                </value>
                <value>
                    <fullName>BARBADOS</fullName>
                </value>
                <value>
                    <fullName>BELARUS</fullName>
                </value>
                <value>
                    <fullName>BELGIUM</fullName>
                </value>
                <value>
                    <fullName>BELIZE</fullName>
                </value>
                <value>
                    <fullName>BENIN</fullName>
                </value>
                <value>
                    <fullName>BERMUDA</fullName>
                </value>
                <value>
                    <fullName>BHUTAN</fullName>
                </value>
                <value>
                    <fullName>BOLIVIA</fullName>
                </value>
                <value>
                    <fullName>BOSNIA AND HERZEGOVINA</fullName>
                </value>
                <value>
                    <fullName>BOTSWANA</fullName>
                </value>
                <value>
                    <fullName>BRAZIL</fullName>
                </value>
                <value>
                    <fullName>BRUNEI DARUSSALAM</fullName>
                </value>
                <value>
                    <fullName>BULGARIA</fullName>
                </value>
                <value>
                    <fullName>BURKINA FASO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country_CF__c</fullName>
        <defaultValue>false</defaultValue>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Country CF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Partner Requests (Country)</relationshipLabel>
        <relationshipName>R00N70000002MeXqEAK</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Create_Primary_Contact__c</fullName>
        <label>Create Primary Contact?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Created</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Create_Service_Lead__c</fullName>
        <label>Create Service Lead?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Created</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Queue_Entry_Date__c</fullName>
        <description>Queue the company is in D&amp;B Compliance Check tool, such as Approved or Declined</description>
        <label>Current Queue Entry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Queue__c</fullName>
        <description>Queue the company is in D&amp;B Compliance Check tool, such as Approved or Declined</description>
        <label>Current Queue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currently_Selling_Dell_CF__c</fullName>
        <defaultValue>false</defaultValue>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Currently Selling Dell CF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Currently_Selling_Dell__c</fullName>
        <defaultValue>false</defaultValue>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Currently Selling Dell</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Custom_Configuration_Imaging__c</fullName>
        <description>Please indicate how you deliver the following services to your customers</description>
        <label>Custom Configuration/Imaging</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Deliver</fullName>
                </value>
                <value>
                    <fullName>Resell</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Custom_enterprise_data_center_services__c</fullName>
        <description>Please indicate how you deliver the following services to your customers</description>
        <label>Custom enterprise/data center services</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Deliver</fullName>
                </value>
                <value>
                    <fullName>Resell</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DUNS_Number__c</fullName>
        <description>DUNS number</description>
        <label>DUNS Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Migration__c</fullName>
        <description>Please indicate how you deliver the following services to your customers</description>
        <label>Data Migration</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Deliver</fullName>
                </value>
                <value>
                    <fullName>Resell</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deliver_to_your_C__c</fullName>
        <label>Deliver to your Customer</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hardware warranty (break/fix support)</fullName>
                </value>
                <value>
                    <fullName>Software technical support</fullName>
                </value>
                <value>
                    <fullName>Installation/ Deployment services</fullName>
                </value>
                <value>
                    <fullName>Installation/Deployment services market</fullName>
                </value>
                <value>
                    <fullName>Custom configuration/imaging</fullName>
                </value>
                <value>
                    <fullName>Data Migration</fullName>
                </value>
                <value>
                    <fullName>Asset recovery/ resale/ recycling</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Consulting Market</fullName>
                </value>
                <value>
                    <fullName>Education/Training</fullName>
                </value>
                <value>
                    <fullName>Managed deployment</fullName>
                </value>
                <value>
                    <fullName>Custom enterprise/data center services</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dell_Primary_Customer_Number__c</fullName>
        <description>Dell Primary Customer Number</description>
        <label>Dell Primary Customer Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dell_Revenue_Percent_CF__c</fullName>
        <defaultValue>false</defaultValue>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Dell Revenue Percent CF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dell_Revenue_Percent__c</fullName>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Dell Revenue Percent</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0-10%</fullName>
                </value>
                <value>
                    <fullName>11-20%</fullName>
                </value>
                <value>
                    <fullName>21-30%</fullName>
                </value>
                <value>
                    <fullName>31-40%</fullName>
                </value>
                <value>
                    <fullName>41-50%</fullName>
                </value>
                <value>
                    <fullName>51-60%</fullName>
                </value>
                <value>
                    <fullName>61-70%</fullName>
                </value>
                <value>
                    <fullName>71-80%</fullName>
                </value>
                <value>
                    <fullName>91-100%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dell_Service_Tools_Used__c</fullName>
        <description>Do you use any of Dell’s tools to enable you to provide services?</description>
        <label>Dell Service Tools Used</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tech Direct</fullName>
                </value>
                <value>
                    <fullName>Support Assist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dell_Services_Portfolio__c</fullName>
        <description>How familiar are you with the Dell services portfolio? </description>
        <label>Dell Services Portfolio</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Familiar</fullName>
                </value>
                <value>
                    <fullName>Not Familiar</fullName>
                </value>
                <value>
                    <fullName>Not Sure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description_CF__c</fullName>
        <defaultValue>false</defaultValue>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Description CF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>